--- a/Zinc/Zinc.csproj
+++ b/Zinc/Zinc.csproj
@@ -17,4 +17,8 @@
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="API\Builtin\Classes\" />
+    </ItemGroup>
+
 </Project>
